# fritz

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build-and-upload.sh
.sqlx/: query-0d1920e6dd011c8e22824d8ba8b9ee71e447d8e2c2687979010707cfc93ba02a.json  query-47430f20310513a9d309ddcad88d608d8f20c13e3c70badc508846ed39fe4ae1.json  query-478b7f0798aa1928a8cd98987b781c3d6d1a13a5cb21e3963b9475bc26b67c29.json  query-569dedf2d1f08bf7ee356bc3b52201345990d8a595fbdf5d5aed9b051f200e9e.json  query-80674b119cc80d21b594c1f0380a9365e27fe97ee0656f5b5dd2253016ab4300.json  query-98b2603fb71c513fa426aa3fde1d263de0cc0c7235719e374d8f5a749e5a3f89.json  query-a93ebc618d3115824ccc2da9e3d58033e435faa1a19cdba54586034f0432b00b.json  query-fae0dd3310986605ebe4bb71205a5563b34853a9415feb10dccb118ca307ce4d.json
data/migrations/: 20231021180127_create_tables.sql  20231025202946_create_metadata_tables.sql
fritz-api/: .gitignore  Cargo.toml
fritz-api/.sqlx/: query-150b15cf7486cc9355b4c01430eecf6c1afaf9eb5e8d9cf984f198ea942caa0a.json  query-ca9d652b0e9b3c2ab728eff4e3f579de538d4579fad34f5ea46d5b6c0b1ed885.json  query-eb65e3ea9b936e1dee1f87b05b801a2fbd30bfc804e7f2b65c146c4e98972abe.json
fritz-api/src/: lib.rs
fritz-api/src/api/: session.rs
fritz-api/src/db/: connection.rs  mod.rs
fritz-api/src/fritz/: mod.rs
fritz-app/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
fritz-app/.sqlx/: query-0c8fd18742123f67b4ce437736a1c12c8b35a40b6c24bb2c44e46ebc73c0442e.json  query-47768a9332d3519644d9aaea188a64cdc825f313a21eb0f60aad565ca4e0879e.json  query-4c326738a1de078338f247a69d1edbd03a773c0d8dc7dc46f91150af4a2318c9.json  query-6da1d687dfe56d18b790f65b8888bb156931bb24583dda3c014127dd61705949.json  query-767b6781463f6a5c51509f9ea32addb10024ff41cb60f2d0da4db254f64396ba.json  query-98b2603fb71c513fa426aa3fde1d263de0cc0c7235719e374d8f5a749e5a3f89.json  query-99265d14cc8ebd2460380bc05dbc7dd800e63c0ef3859800ff19bd4de1eeaed3.json  query-a93ebc618d3115824ccc2da9e3d58033e435faa1a19cdba54586034f0432b00b.json  query-fae0dd3310986605ebe4bb71205a5563b34853a9415feb10dccb118ca307ce4d.json
fritz-app/migrations/: 20231021180127_create_tables.sql  20231025202946_create_metadata_tables.sql  20240628114832_create_ping_tables.sql
fritz-app/src/: lib.rs  logger.rs  main.rs
fritz-app/src/api/: client.rs  session.rs
fritz-app/src/db/: connection.rs  model.rs
fritz-app/src/fritz/: mod.rs
fritz-app/src/log/: mod.rs
fritz-app/src/ping/: mod.rs
fritz-app/src/test/: insert_new.rs  mod.rs
migration/in/: logs.csv  updates.csv
migrations/: 20231021180127_create_tables.sql
src/: lib.rs  logger.rs
src/api/: challenge.rs  client.rs  mod.rs  model.rs  session.rs
src/db/: connection.rs  mod.rs  model.rs
src/fritz/: mod.rs
src/login/: challenge.rs  client.rs  mod.rs  session.rs  xml.rs
src/logs/: log_entry.rs  log_msg.rs  mod.rs  traits.rs
src/logs/message/: internet.rs  mod.rs  phone.rs  system.rs  usb.rs  wlan.rs
