[package]
name = "fritz-log-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
log = { version = "0" }
simplelog = { version = "0" }
thiserror = { version = "1" }
anyhow = { version = "1" } # easy error handling and propagation
chrono = { version = "0" } # date and time features
lazy-regex = { version = "2" }
simple-error = { version = "0" }
pbkdf2 = { version = "0" } # fritzbox authentication
hex = { version = "0" } # fritzbox authentication
sha2 = { version = "0" } # fritzbox authentication
tokio = { version = "1", features = ["rt", "macros", "fs", "process"] }
reqwest = { version = "0", default-features = false, features = ["default-tls", "multipart"] }
roxmltree = { version = "0" } # parsing xml
dialoguer = { version = "0" } # prompting for passwords and stuff
rusqlite = { version = "0", features = ["bundled"] } # log database

[profile.release]
strip = true
